<resources>
    <string name="app_name">커디</string>
    <string name="all_cancel">취소</string>
    <string name="all_okay">확인</string>
    <string name="all_go_back">뒤로 가기</string>
    <string name="all_next">다음</string>
    <string name="all_data_loading_failed_message">데이터를 정상적으로 불러오지 못했어요 😢</string>
    <string name="all_update_button_label">수정</string>
    <string name="all_delete_button_label">삭제</string>
    <string name="all_report_button_label">신고하기</string>
    <string name="all_report_dialog_title">신고하기</string>
    <string name="all_report_dialog_positive_button_label">신고</string>
    <string name="all_report_complete_dialog_title">신고 완료</string>
    <string name="all_report_complete_dialog_message">커뮤니티 가이드에 따라\n검토 후 처리 됩니다. 감사합니다.</string>
    <string name="all_report_fail_message">신고하는 데 실패했어요 😢</string>
    <string name="all_report_duplicate_message">이미 신고 하셨습니다.</string>
    <string name="all_block">차단</string>
    <string name="all_report_duplicate_dialog_title">중복 신고</string>
    <string name="all_report_duplicate_dialog_message">이미 신고하셨습니다.</string>
    <string name="all_network_error_icon_description">네트워크 에러 아이콘</string>
    <string name="all_fetch_fail_title">조회 실패</string>
    <string name="all_network_check_message">네트워크 연결을 확인해주세요.</string>
    <string name="all_network_error_title">인터넷 연결이 불안정합니다.</string>
    <string name="all_network_error_message">인터넷 연결이 불안정하여\n데이터를 불러올 수 없습니다.</string>
    <string name="all_retry">재시도</string>
    <string name="all_finish_confirm_message">한 번 더 누르면 종료됩니다.</string>
    <string name="all_just_before">방금 전</string>
    <string name="all_is_updated">수정됨</string>
    <string name="all_paid">유료</string>
    <string name="all_free">무료</string>
    <string name="all_paid_free">유료/무료</string>
    <string name="all_in_progress">진행 중</string>
    <string name="all_applying_ended">신청 마감</string>
    <string name="all_applying_in_progress">신청 마감 D-%d</string>
    <string name="all_applying_in_progress_d_day">신청 마감 D-DAY</string>
    <string name="all_applying_up_coming">신청 시작 D-%d</string>
    <string name="all_applying_up_coming_d_day">신청 시작 D-DAY</string>
    <string name="all_event_up_coming">행사 시작 D-%d</string>
    <string name="all_event_up_coming_d_day">행사 시작 D-DAY</string>
    <string name="all_online">온라인</string>
    <string name="all_offline">오프라인</string>
    <string name="all_onoffline">온/오프라인</string>
    <string name="all_ended">종료</string>
    <string name="all_fetch_error_dialog_title">오류</string>
    <string name="all_fetch_error_dialog_message">데이터를 불러올 수 없습니다.</string>
    <string name="all_unexpected_error_occurred_dialog_message">알 수 없는 오류가 발생했습니다.</string>
    <string name="all_image_permission_request_dialog_message">이미지 권한 허용을 위해 설정창으로 이동하시겠습니까?</string>
    <string name="all_image_permission_request_dialog_title">이미지 권한이 거부되었어요</string>
    <string name="all_choose_image_picker_type">갤러리 종류를 선택하세요</string>
    <string name="splash_app_update_title">업데이트</string>
    <string name="splash_app_update_message">새로운 버전이 출시되었어요!\n지금 바로 커디 스토어로 이동하시겠어요?</string>
    <string name="splash_app_update_canceled_message">업데이트 없이 서비스를 이용하실 수 없어요 😥</string>
    <string name="onboarding_join_failed_message">회원가입에 실패했어요!</string>
    <string name="onboarding_back_press_desc">온보딩 화면 뒤로가기</string>
    <string name="onboardingname_page">1/4</string>
    <string name="onboardingname_title">이름 설정</string>
    <string name="onboardingname_message">이름이 무엇인가요?</string>
    <string name="onboardingname_sub_message">설정 시 변경이 불가합니다.</string>
    <string name="onboardingname_hint">입력해주세요.</string>
    <string name="onboardingfield_page">2/4</string>
    <string name="onboardingfield_title">관심 분야</string>
    <string name="onboardingfield_message">관심 있는 카테고리를 선택해 주세요.</string>
    <string name="onboardingfield_sub_message">복수 선택이 최대 4개까지 가능합니다.</string>
    <string name="onboardingfield_selection_limit_exceed">선택할 수 있는 개수를 초과했어요!</string>
    <string name="onboardingeducation_page">3/4</string>
    <string name="onboardingeducation_title">교육 활동</string>
    <string name="onboardingeducation_message">교육 이력이 있나요?</string>
    <string name="onboardingeducation_sub_message">교육받은 활동이 있다면 추가해 주세요.</string>
    <string name="onboardingeclub_page">4/4</string>
    <string name="onboardingeclub_title">동아리 활동</string>
    <string name="onboardingeclub_message">동아리 활동이 있나요?</string>
    <string name="onboardingeclub_sub_message">동아리 활동을 했다면 추가해 주세요.</string>
    <string name="kerdyfirebasemessaging_comment_notification_title">댓글이 달렸어요.</string>
    <string name="kerdyfirebasemessaging_comment_notification_content_format">%s: %s</string>
    <string name="kerdyfirebasemessaging_comment_notification_channel_name">댓글 작성 알림 채널</string>
    <string name="kerdyfirebasemessaging_comment_notification_channel_description">댓글 작성 알림을 받기 위한 알림 채널입니다.</string>
    <string name="kerdyfirebasemessaging_interest_event_notification_title_format">관심 태그 행사가 업데이트 되었어요.</string>
    <string name="kerdyfirebasemessaging_interest_event_notification_channel_name">관심 태그 행사 알림 채널</string>
    <string name="kerdyfirebasemessaging_interest_event_notification_channel_description">관심 태그 행사 알림을 받기 위한 알림 채널입니다.</string>
    <string name="kerdyfirebasemessaging_message_notification_channel_name">쪽지 알림 채널</string>
    <string name="kerdyfirebasemessaging_message_notification_channel_description">쪽지 알림을 받기 위한 알림 채널입니다.</string>
    <string name="login_failed_message">로그인에 실패했어요 😥</string>
    <string name="login_logo">로그인 로고</string>
    <string name="login_github_button_label">Github으로 로그인</string>
    <string name="login_post_notification_permission_granted_message">푸시 알림 권한을 허용하였습니다.</string>
    <string name="login_post_notification_permission_needed_title">알림 권한</string>
    <string name="login_post_notification_permission_needed_message">알림 권한을 허용하시겠습니까?</string>
    <string name="main_menu_item_name_of_profile">프로필</string>
    <string name="main_menu_item_name_of_event">행사</string>
    <string name="main_menu_item_name_of_message">쪽지</string>
    <string name="main_menu_item_name_of_setting">설정</string>
    <string name="profile_memberimagedescription">회원의 사진</string>
    <string name="profile_greeting">Hello,</string>
    <string name="profile_educationslabel">교육 활동</string>
    <string name="profile_clubslabel">동아리 활동</string>
    <string name="profile_eventslabel">참여 행사</string>
    <string name="profile_no_description">소개말이 없습니다.</string>
    <string name="profile_profile_fetching_error_message">프로필을 불러오는 데 실패했어요 😥</string>
    <string name="profile_toolbar_title">프로필 조회</string>
    <string name="profile_more_button_title">더보기</string>
    <string name="profile_block_complete_dialog_title">차단 완료</string>
    <string name="profile_block_complete_dialog_message">해당 회원의 게시글, 댓글이 차단됩니다.</string>
    <string name="profile_block_fail_message">차단에 실패했어요 😥</string>
    <string name="profile_block_warning_dialog_message">해당 회원을 차단 하시겠습니까?</string>
    <string name="profile_unblock_complete_message">차단 해제 했습니다</string>
    <string name="profile_unblock_fail_message">차단 해제에 실패했어요 😥</string>
    <string name="profilemenudialog_block_button_label">차단하기</string>
    <string name="profilemenudialog_report_button_label">신고하기</string>
    <string name="profilemenudialog_unblock_button_label">차단 해제</string>
    <string name="sendmessagedialog_title">쪽지 보내기</string>
    <string name="sendmessagedialog_message">%s님께 쪽지를 보내시겠습니까?</string>
    <string name="sendmessagedialog_hint">쪽지 메세지를 작성해주세요</string>
    <string name="sendmessagedialog_send_button_label">보내기</string>
    <string name="sendmessagedialog_message_send_fail_message">쪽지를 보내는 데 실패했어요 😥</string>
    <string name="scrappedevent_no_content_view_desc">아직 스크랩한 행사가 없어요!</string>
    <string name="scrappedevent_no_content_view_title">행사를 스크랩하면 여기서 확인할 수 있어요.</string>
    <string name="event_poster_description">event poster</string>
    <string name="event_filter">필터 설정</string>
    <string name="event_count_format">%,d개</string>
    <string name="event_count_prefix">총</string>
    <string name="event_count_suffix">개</string>
    <string name="event_scrap">스크랩</string>
    <string name="event_view_notification_description">알림 목록 화면 조회</string>
    <string name="event_search_conference_description">컨퍼런스 검색 화면</string>
    <string name="event_competition">대회</string>
    <string name="event_conference">컨퍼런스</string>
    <string name="comment_menu_button">댓글의 메뉴 버튼</string>
    <string name="comment_deleted_comment_author_name">삭제</string>
    <string name="comment_deleted_comment_content">삭제된 댓글입니다.</string>
    <string name="comment_author_image_description">댓글 작성자의 사진</string>
    <string name="comments_child_comments_count_format">답글 %d</string>
    <string name="comments_edit_comment_hint">댓글을 입력하세요.</string>
    <string name="comments_comment_submit_button_label">입력</string>
    <string name="comments_complete_edit_comment">댓글이 수정되었습니다.</string>
    <string name="comments_complete_delete_comment">댓글이 삭제되었습니다.</string>
    <string name="comments_complete_post_comment">댓글을 게시했습니다.</string>
    <string name="comments_comments_fetching_error_message">댓글들을 불러오는 데 실패했어요 😥</string>
    <string name="comments_comments_posting_error_message">댓글을 게시하는 데 실패했어요 😥</string>
    <string name="comments_comments_update_error_message">댓글을 수정하는 데 실패했어요 😥</string>
    <string name="comments_comments_delete_error_message">댓글을 삭제하는 데 실패했어요 😥</string>
    <string name="comments_comment_report_dialog_message">해당 댓글을 신고 하시겠습니까?</string>
    <string name="comments_not_exist_comment_message">존재하지 않는 댓글입니다.</string>
    <string name="commentsmenudialog_edit_button_label">수정</string>
    <string name="commentsmenudialog_delete_button_label">삭제</string>
    <string name="commentsmenudialog_report_button_label">신고하기</string>
    <string name="commentdeletedialog_title">댓글 삭제</string>
    <string name="commentdeletedialog_message">해당 댓글을 삭제하시겠습니까?</string>
    <string name="commentdeletedialog_positive_button_label">삭제</string>
    <string name="commentdeletedialog_negative_button_label">취소</string>
    <string name="childcomments_edit_child_comment_hint">답글을 입력하세요.</string>
    <string name="childcomments_toolbar_title">답글</string>
    <string name="childcomments_parent_comment_image_description">부모 댓글 작성자의 사진</string>
    <string name="childcomments_child_comment_author_image_description">자식 댓글 작성자의 사진</string>
    <string name="conferencefilter_title">필터</string>
    <string name="conferencefilter_conference_status_title">진행 상태</string>
    <string name="conferencefilter_all_tag_name">전체</string>
    <string name="conferencefilter_status_in_progress_tag_name">진행 중</string>
    <string name="conferencefilter_status_scheduled_tag_name">진행 예정</string>
    <string name="conferencefilter_status_ended_tag_name">마감</string>
    <string name="conferencefilter_conference_event_tag_title">태그</string>
    <string name="conferencefilter_conference_duration_title">기간</string>
    <string name="conferencefilter_apply">적용하기</string>
    <string name="conferencefilter_conference_duration_divider_mark">~</string>
    <string name="conferencefilter_duration_date_format">%02d.%02d.%02d</string>
    <string name="conferencefilter_duration_date_last_format">&#160;- %02d.%02d.%02d</string>
    <string name="conferencefilter_clear">초기화</string>
    <string name="recruitmentaccepted_dialog_title">요청 수락</string>
    <string name="recruitmentaccepted_dialog_message">오픈 채팅으로 연결이 가능합니다.\n상대방에게 인사를 건네보세요.</string>
    <string name="editmyprofile_edit_profile">프로필 수정</string>
    <string name="editmyprofile_description_hint">소개말을 입력하세요.</string>
    <string name="editmyprofile_choose_field_message">내가 관심있는 분야를 선택하세요.</string>
    <string name="editmyprofile_field_label">관심 카테고리</string>
    <string name="editmyprofile_field_add_button">관심 카테고리 추가 버튼</string>
    <string name="editmyprofile_member_image">회원의 사진</string>
</resources>