<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.emmsale.presentation.ui.onboarding.OnboardingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        tools:context=".presentation.ui.onboarding.OnboardingActivity">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/onboarding_back_press_desc"
            android:paddingVertical="20dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_onboarding_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/onboardingfield_page"
            android:textColor="@color/primary_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back" />

        <TextView
            android:id="@+id/tv_category_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboardingfield_title"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_page" />

        <TextView
            android:id="@+id/tv_category_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/onboardingfield_message"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_setting"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/tv_category_setting_warning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/onboardingfield_sub_message"
            android:textColor="@color/dark_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_title" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup_field_tags"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_setting_warning" />

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/bg_all_two_state_button"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/all_next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipgroup_field_tags" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
