<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_all_dialog"
        android:textAlignment="center">

        <TextView
            android:id="@+id/tv_commentdeletedialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:text="@string/commentdeletedialog_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_commentdeletedialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="48dp"
            android:text="@string/commentdeletedialog_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_commentdeletedialog_title" />

        <View
            android:id="@+id/view_commentdeletedialog_horizontaldivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="26dp"
            android:background="@color/edittext_underline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_commentdeletedialog_message" />

        <View
            android:id="@+id/view_commentdeletedialog_verticaldivider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/edittext_underline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_commentdeletedialog_horizontaldivider" />

        <TextView
            android:id="@+id/tv_commentdeletedialog_positivebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="57dp"
            android:paddingVertical="20dp"
            android:text="@string/commentdeletedialog_positive_button_label"
            android:textColor="#FF0000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_commentdeletedialog_verticaldivider"
            app:layout_constraintTop_toTopOf="@+id/view_commentdeletedialog_verticaldivider" />

        <TextView
            android:id="@+id/tv_commentdeletedialog_negativebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="57dp"
            android:paddingVertical="20dp"
            android:text="@string/commentdeletedialog_negative_button_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view_commentdeletedialog_verticaldivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_commentdeletedialog_verticaldivider" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
